kubernetes/proxy-ingress/audiobook-proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-ingress
  namespace: projects
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - audiobook.alexmickelson.guru
    secretName: audiobookshelf-tls-cert
  rules:
  - host: audiobook.alexmickelson.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf
            port:
              number: 13378
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: projects
spec:
  ports:
  - port: 13378
    targetPort: 13378
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: audiobookshelf
  namespace: projects
  labels:
    kubernetes.io/service-name: audiobookshelf
addressType: IPv4
ports:
- name: http
  port: 13378
  protocol: TCP
endpoints:
- addresses:
  - 100.122.128.107
  conditions:
    ready: true
