kubernetes/proxy-ingress/copilot-proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copilot-ingress
  namespace: projects
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - copilot.alexmickelson.guru
    secretName: copilot-tls-cert
  rules:
  - host: copilot.alexmickelson.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: copilot
            port:
              number: 4444
---
apiVersion: v1
kind: Service
metadata:
  name: copilot
  namespace: projects
spec:
  ports:
    - port: 4444
      targetPort: 4444
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: copilot
  namespace: projects
  labels:
    kubernetes.io/service-name: copilot
addressType: IPv4
ports:
- name: http
  port: 4444
  protocol: TCP
endpoints:
- addresses:
  - 100.122.128.107
  conditions:
    ready: true
