kubernetes/proxy-ingress/grafana-proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: projects
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.alexmickelson.guru
    secretName: grafana-tls-cert
  rules:
  - host: grafana.alexmickelson.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: projects
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: grafana
  namespace: projects
  labels:
    kubernetes.io/service-name: grafana
addressType: IPv4
ports:
- name: http
  port: 3000
  protocol: TCP
endpoints:
- addresses:
  - 100.110.207.108
  conditions:
    ready: true
