kubernetes/proxy-ingress/ha-proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: projects
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ha.alexmickelson.guru
    secretName: ha-tls-cert
  rules:
  - host: ha.alexmickelson.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 8123
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: projects
spec:
  ports:
  - port: 8123
    targetPort: 8123
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  namespace: projects
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
- name: http
  port: 8123
  protocol: TCP
endpoints:
- addresses:
  - 100.122.128.107
  conditions:
    ready: true
