kubernetes/proxy-ingress/homepage-proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: projects
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - home.alexmickelson.guru
    secretName: home-tls-cert
  rules:
  - host: home.alexmickelson.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage-service
            port:
              number: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: projects
spec:
  type: ExternalName
  externalName: 100.122.128.107
