kubernetes/proxy-ingress/immich-proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: projects
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "50000M"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - photos.alexmickelson.guru
      secretName: immich-tls-cert
  rules:
    - host: photos.alexmickelson.guru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich
                port:
                  number: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: projects
spec:
  ports:
    - port: 2283
      targetPort: 2283
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: immich
  namespace: projects
  labels:
    kubernetes.io/service-name: immich
addressType: IPv4
ports:
  - name: http
    port: 2283
    protocol: TCP
endpoints:
  - addresses:
      - 100.110.207.108
    conditions:
      ready: true
