kubernetes/proxy-ingress/prometheus-proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: projects
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.alexmickelson.guru
      secretName: prometheus-tls-cert
  rules:
    - host: prometheus.alexmickelson.guru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: projects
spec:
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: prometheus
  namespace: projects
  labels:
    kubernetes.io/service-name: prometheus
addressType: IPv4
ports:
  - name: http
    port: 9091
    protocol: TCP
endpoints:
  - addresses:
      - 100.110.207.108
    conditions:
      ready: true
